# energy-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
calibration/: samples.npy
configs/: example_config.json  live_openrouter_config.json  local_quant_config.json
scripts/: generate_test_assets.py
src/edge_agent/: __init__.py  agent.py  artifact_builder.py  cli.py  config.py  device.py  evaluator.py  models.py  openrouter_client.py  quantization.py  reasoner.py
