[project]
name = "edge-openrouter-agent"
version = "0.1.0"
description = "Edge optimization agent with OpenRouter-based API routing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "typer[all]>=0.9.0",
  "pydantic>=2.0.0"
]

[project.optional-dependencies]
quant = [
  "numpy>=1.24.0",
  "onnx>=1.15.0",
  "onnxruntime>=1.17.0",
  "onnxconverter-common>=1.14.0",
  "tensorflow>=2.14.0"
]
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "mypy>=1.0.0"
]

[project.scripts]
edge-agent = "edge_agent.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
